# swagger.json
@@ -23,52 +23,70 @@
     },
 
     "paths": {
-      "/user": {
-        "parameters": [
-            {
-              "name": "body",
-              "in": "body",
-              "required": true,
-              "description": "Add user to DB",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-      "post": {
-        "tags": ["User"],
-        "summary": "Add a new user to DB",
-        "requestBody":{
-            "content":{
-    "application/json":{
-      "schema":{      
-        "type": "object",
-        "$ref": "#/definitions/User"
-      },
-        "required": true
-    }
-}
-    },
-        "responses": {
-          "200": {
-            "description": "Created"
-          }
-        }
-      }
-    },
-    "/user/login/{userName}": {
+    "/user/login": {
       "parameters": [
-          {
-            "name": "userName",
-            "in": "path",
-            "required": true,
-            "description": "Name of user that we want to find",
-            "type": "string"
-          }
-        ],
+        {
+          "name": "authorization",
+          "in": "header",
+          "required": true,
+          "description": "jwt",
+          "type": "string"
+        }
+      ],
     "post": {
       "tags": ["User"],
       "summary": "Get token by name",
+      "responses": {
+        "200": {
+          "description": "OK"
+        }
+      }
+    }
+  },
+  "/user": {
+    "post": {
+      "parameters": [
+        {
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "description": "Add user to DB",
+          "schema": {
+            "$ref": "#/definitions/User"
+          }
+        }
+      ],
+      "tags": ["User"],
+      "summary": "Add a new user to DB",
+      "requestBody":{
+          "content":{
+  "application/json":{
+    "schema":{      
+      "type": "object",
+      "$ref": "#/definitions/User"
+    },
+      "required": true
+  }
+}
+  },
+      "responses": {
+        "200": {
+          "description": "Created"
+        }
+      }
+    },
+    "get": {
+      "parameters": [
+        {
+          "name": "authorization",
+          "in": "header",
+          "required": true,
+          "description": "jwt",
+          "type": "string"
+        }
+      ],
+      "tags": ["User"],
+      "summary": "Get user by Name",
       "responses": {
         "200": {
           "description": "OK",
@@ -77,62 +95,40 @@
           }
         }
       }
-    }
-  },
-        "/user/{userName}": {
-            "parameters": [
-                {
-                  "name": "userName",
-                  "in": "path",
-                  "required": true,
-                  "description": "Name of user that we want to find",
-                  "type": "string"
-                }
-              ],
-          "get": {
-            "tags": ["User"],
-            "summary": "Get user by Name",
-            "responses": {
-              "200": {
-                "description": "OK",
-                "schema": {
-                  "$ref": "#/definitions/User"
-                }
-              }
-            }
-          },
-          "patch": {
-            "parameters": [
-              {
-                "name": "userName",
-                "in": "path",
-                "required": true,
-                "description": "Update User in DB"
-              },
-              {
-                "name": "supportedProperties",
-                "in": "body",
-                "required": true,
-                "schema":{
-                  "$ref":"#/definitions/User"
-                }
-              }
-            ],
-            "tags": ["User"],
-            "summary": "Update user by id",
-            "responses": {
-              "200": {
-                "description": "Updated"
-                },
-              "401": {
-                "description": "Unauthorized"
-                },
-              "404": {
-                "description": "id not found"
-                }
-              }
-            }
+    },
+    "patch": {
+      "parameters": [
+        {
+          "name": "authorization",
+          "in": "header",
+          "required": true,
+          "description": "jwt",
+          "type": "string"
         },
+        {
+          "name": "supportedProperties",
+          "in": "body",
+          "required": true,
+          "schema":{
+            "$ref":"#/definitions/User"
+          }
+        }
+      ],
+      "tags": ["User"],
+      "summary": "Update user by id",
+      "responses": {
+        "200": {
+          "description": "Updated"
+          },
+        "401": {
+          "description": "Unauthorized"
+          },
+        "404": {
+          "description": "id not found"
+          }
+        }
+      }
+  },
         "/item": {
           "post": {
             "parameters": [
@@ -413,9 +409,6 @@
             "lastName": {
               "type": "string"
             },
-            "points":{ 
-              "type": "integer"
-            },
             "email": {
               "type": "string"
             },
@@ -427,9 +420,6 @@
             },
             "imageUrl": {
               "type": "string"
-            },
-            "searchRadius": {
-              "type": "integer"
             },
             "location": {
             "type": "object",
